--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "~react-toastify/dist/ReactToastify.min.css";
+
 * {
   font-family: "Montserrat", sans-serif;
 }
